--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -7,14 +7,7 @@
   </head>
   <body>
     <!-- <h1>Hello World</h1> -->
-    <script>
-      // This is my first JavaScript code!
-      // console.log("Hello World!");
-    </script>
+    <script></script>
     <script src="./js/getting-started.js"></script>
-    Otabek - 1 = score 65/100, methodlarda chalkashlik bor, arrow function ishlatishni o'rganish kerak, confidence kam
-    Jorabek - 2 = score 75/100 confidence bor, methodlarni tushunishi yaxshi, arrow function ishlatishni biladi, if condition da shart berishi yaxshimas
-    Muhammadumar - 3 = score 80/100 confidence juda yaxshi, methodlarni tushunishi zo'r, arrow function ishlatishni biladi, if condition da shart berishi organish kerak
-    Merojbek - 4 = score 75/100 confidence kam, methodlarni tushunishi zor, arrow function ishlatishda qiynaldi, filter da qiynaldi
   </body>
 </html>
