--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -9,5 +9,6 @@
     <!-- <h1>Hello World</h1> -->
     <script></script>
     <script src="./js/getting-started.js"></script>
+    <script src="./js/basics.js"></script>
   </body>
 </html>
