--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -10,5 +10,6 @@
     <script></script>
     <script src="./js/getting-started.js"></script>
     <script src="./js/basics.js"></script>
+    <script src="./js/operators.js"></script>
   </body>
 </html>
