--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -11,5 +11,6 @@
     <script src="./js/getting-started.js"></script>
     <script src="./js/basics.js"></script>
     <script src="./js/operators.js"></script>
+    <script src="./js/control-flow.js"></script>
   </body>
 </html>
