--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -12,5 +12,6 @@
     <script src="./js/basics.js"></script>
     <script src="./js/operators.js"></script>
     <script src="./js/control-flow.js"></script>
+    <script src="./js/objects.js"></script>
   </body>
 </html>
