--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -13,5 +13,6 @@
     <script src="./js/operators.js"></script>
     <script src="./js/control-flow.js"></script>
     <script src="./js/objects.js"></script>
+    <script src="./js/leetcode.js"></script>
   </body>
 </html>
