--- a/Part-1/index.html
+++ b/Part-1/index.html
@@ -14,5 +14,6 @@
     <script src="./js/control-flow.js"></script>
     <script src="./js/objects.js"></script>
     <script src="./js/arrays.js"></script>
+    <script src="./js/functions.js"></script>
   </body>
 </html>
