--- a/Object-oriented Programming in JavaScript/index.html
+++ b/Object-oriented Programming in JavaScript/index.html
@@ -8,5 +8,6 @@
   <body>
     <script src="./js/main.js"></script>
     <script src="./js/objects.js"></script>
+    <script src="./js/prototypes.js"></script>
   </body>
 </html>
