--- a/Object-oriented Programming in JavaScript/index.html
+++ b/Object-oriented Programming in JavaScript/index.html
@@ -9,5 +9,6 @@
     <script src="./js/main.js"></script>
     <script src="./js/objects.js"></script>
     <script src="./js/prototypes.js"></script>
+    <script src="./js/prototypical-inheritance.js"></script>
   </body>
 </html>
