ES6 classes introduction

--- a/Object-oriented Programming in JavaScript/index.html
+++ b/Object-oriented Programming in JavaScript/index.html
@@ -10,5 +10,6 @@
     <script src="./js/objects.js"></script>
     <script src="./js/prototypes.js"></script>
     <script src="./js/prototypical-inheritance.js"></script>
+    <script src="./js/es6-classes.js"></script>
   </body>
 </html>
