Done with all lessons

--- a/Object-oriented Programming in JavaScript/index.html
+++ b/Object-oriented Programming in JavaScript/index.html
@@ -11,5 +11,6 @@
     <script src="./js/prototypes.js"></script>
     <script src="./js/prototypical-inheritance.js"></script>
     <script src="./js/es6-classes.js"></script>
+    <script type="module" src="./js/es6-modules.js"></script>
   </body>
 </html>
